infrastructures/OCI/k8s/apisix/apisix-ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: apisix-api
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.oci.santocaruso.eu`)
      kind: Rule
      services:
        - name: apisix-gateway
          port: 9080
  tls:
    certResolver: letsencrypt
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: apisix-gateway
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gateway.oci.santocaruso.eu`)
      kind: Rule
      services:
        - name: apisix-gateway
          port: 9080
  tls:
    certResolver: letsencrypt
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: apisix-dashboard
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`apisix.oci.santocaruso.eu`)
      kind: Rule
      services:
        - name: apisix-dashboard
          port: 9000
  tls:
    certResolver: letsencrypt
